[4.x] Fix problems enabling request scope in the Webserver (#11368)
Fix problems enabling request scope in the Webserver. Update codegen to add new contracts for raw types. Update declarative test to show request scope in action.